Revision history for Perl extension AnyEvent.

5.271  Tue Jun  8 12:05:46 CEST 2010
	- backport to perl 5.8.x.

5.27   Sun Jun  6 12:12:05 CEST 2010
	- postpone differently in AnyEvent::Socket now, as
          when not, canceling the connection attempt might fail
          (found by Felix Antonius Wilhelm Ostmann).
	- explicitly check for non-stream sockets in AE::Handle, too many
          clueless people fell into the trap of this somehow working.
	- simplified and reworked the "OTHER MODULES" section.
        - better/more condvar examples.

5.261 Wed Apr 28 16:13:36 CEST 2010
	- AF_INET6 was not properly used from Socket6 during configuration
          time (found by Andy Grundman).

5.26  Mon Apr 12 04:49:35 CEST 2010
	- don't generate spurious readyness notifications when select
          returns EINTR in the pure perl backend (analysed and testcase
          by Bas Denissen).
        - give same examples in SYNOPSIS sections of AnyEvent and AE.
        - provider faster implementations for AE::time/now/now_update for
          EV and Perl backends.
        - provide faster AE::cv and AE::time implementations for all
          backends.
        - no longer support lower/mixed-case signal names (this was
          never documented nor universally supported).
        - some more memory µ-optimisations, and somewhat less messy
          code to cope with both AnyEvent and AE APIs.

5.251 Sat Mar 13 00:58:21 CET 2010
        - make test failed if it was run before make install on perl <=
          5.8.8, and older versions of perl make our live very difficult,
          so write constants.pl during Makefile.PL time.

5.25  Sat Mar 13 00:23:14 CET 2010
	- fix a race condition in AnyEvent::Handle that would cause
          a "bio_read: unsupported method" error (in _another_
          ssl connection) after user code threw an exception.
        - added AnyEvent::Handle->destroyed method.
	- speed up AnyEvent::Socket::format_address and ::format_ipv6.